@@ -9,3 +9,4 @@ Advantages:
 . simpler bootstrap process: download a single php file, execute it
 . easier to extend by adding new tasks
 . out of the box support for sources on gith repositories
+. does not need python to generate html out of rst
